@@ -134,7 +134,7 @@ class UniProtKBEntryConverterTest {
         UniProtDocument document = converter.convert(entry);
 
         // then
-        assertEquals(List.of(species), document.idDefault);
+        assertEquals(Arrays.asList(species), document.idDefault);
     }
 
     @Test
@@ -152,7 +152,7 @@ class UniProtKBEntryConverterTest {
         UniProtDocument document = converter.convert(entry);
 
         // then
-        assertEquals(List.of(id), document.idDefault);
+        assertEquals(Arrays.asList(id), document.idDefault);
     }
 
     @Test
